--- a/App/main.ipynb
+++ b/App/main.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
     "        #Por fim, retiro as linhas que contém o total de cada continente, deixando apenas os países\n",
     "        data = data[~data['Pais'].isin(list_continentes)]\n",
     "\n",
-    "        data = data.melt(id_vars=['Pais', 'Ano', 'Continente'], var_name='Mes', value_name='Qtd')\n",
+    "        data = data.melt(id_vars=['Continente', 'Pais', 'Ano'], var_name='Mes', value_name='Qtd')\n",
     "\n",
     "        #Concateno em um dataframe, pois assim permito que o usuário faça a importação de diversos CSVs, um para cada ano\n",
     "        df = pd.concat([df, data])\n",
@@ -186,45 +186,114 @@
     "    if filter_cont != 'Todos':\n",
     "        df = df.loc[df['Continente'] == filter_cont]\n",
     "\n",
-    "    st.write(df)\n"
+    "    #Crio o filtro de colunas\n",
+    "    list_colunas = st.multiselect('Selecione as colunas', df.columns, df.columns)\n",
+    "    #Aplico o filtro\n",
+    "    df = df[list_colunas]\n",
+    "\n",
+    "    st.write(df) \n",
+    "    \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-09-09 08:49:12.781 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-09-09 08:49:12.782 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-09-09 08:49:12.786 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-09-09 08:49:12.788 Session state does not function when running a script without `streamlit run`\n",
-      "2024-09-09 08:49:12.791 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-09-09 08:49:12.793 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-09-09 08:49:12.803 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-09-09 08:49:12.805 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. esenvolver Serviço de Download de Arquivos:\n",
+    "### 4. Desenvolver Serviço de Download de Arquivos:\n",
     "Implemente um serviço que permita ao usuário fazer o download dos dados filtrados em formato CSV diretamente pela interface da aplicação."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 239,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "\n",
+    "import pandas as pd\n",
+    "import streamlit as st\n",
+    "import regex as re\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "files = st.file_uploader('Upload', type='csv', accept_multiple_files=True)\n",
+    "\n",
+    "list_continentes = ['África','América Central','América do Norte', 'América do Sul', 'Ásia', 'Europa', 'Oriente Médio', 'Oceania']\n",
+    "\n",
+    "\n",
+    "if files != []:\n",
+    "    for file in files:\n",
+    "        data = pd.read_csv(file)\n",
+    "        #Primeiro obtive a identificação do ano, que está dentro de uma frase na terceira linha\n",
+    "        line = data.iloc[1][0]\n",
+    "        #Utilizo Regex para extrair o ano\n",
+    "        Ano = re.findall(r'\\b(20[0-9][0-9])\\b', line)[0]   \n",
+    "        #Depois trato o restante do arquivo para ficar no formato desejado    \n",
+    "        data = data.iloc[4:]\n",
+    "        data.iloc[0][0] = 'Pais'\n",
+    "        data.columns = data.iloc[0]\n",
+    "        data = data.drop(data.index[0])\n",
+    "        data = data.dropna()\n",
+    "        #Retiro a coluna e a linha de total\n",
+    "        data = data[data['Pais'] != 'Total']\n",
+    "        data = data.drop(columns='Total')\n",
+    "        data['Ano'] = Ano\n",
+    "\n",
+    "        #Utilizei IA para criar a função que identifica o continente (Ps: Estou com muita dificuldade para criar funções lambda)\n",
+    "        data['Continente'] = data['Pais'].apply(\n",
+    "            lambda line: next((pais for pais in list_continentes if pais in line), None)\n",
+    "        )\n",
+    "        data['Continente'] = data['Continente'].fillna(method='ffill')\n",
+    "\n",
+    "        #Por fim, retiro as linhas que contém o total de cada continente, deixando apenas os países\n",
+    "        data = data[~data['Pais'].isin(list_continentes)]\n",
+    "\n",
+    "        data = data.melt(id_vars=['Continente', 'Pais', 'Ano'], var_name='Mes', value_name='Qtd')\n",
+    "\n",
+    "        #Concateno em um dataframe, pois assim permito que o usuário faça a importação de diversos CSVs, um para cada ano\n",
+    "        df = pd.concat([df, data])\n",
+    "\n",
+    "    #Crio a lista de continentes\n",
+    "    list_cont = df['Continente'].drop_duplicates().tolist()\n",
+    "    list_cont.append('Todos')\n",
+    "\n",
+    "    #Pego o id da opção \"Todos\"\n",
+    "    default_cont = list_cont.index('Todos')\n",
+    "\n",
+    "    #Crio o filtro de continentes\n",
+    "    filter_cont = st.selectbox('Filtrar Continentes', list_cont, index=default_cont)\n",
+    "\n",
+    "    #Aplico a condição para só filtrar se houver seleção\n",
+    "    if filter_cont != 'Todos':\n",
+    "        df = df.loc[df['Continente'] == filter_cont]\n",
+    "\n",
+    "    #Crio o filtro de colunas\n",
+    "    list_colunas = st.multiselect('Selecione as colunas', df.columns, df.columns)\n",
+    "    #Aplico o filtro\n",
+    "    df = df[list_colunas]\n",
+    "\n",
+    "    #Mostro a tabela filtrada\n",
+    "    st.write(df) \n",
+    "\n",
+    "    #Converto para CSV\n",
+    "    csv = df.to_csv().encode(\"utf-8\")\n",
+    "\n",
+    "    #Crio botão para baixar o arquivo csv\n",
+    "    st.download_button(\n",
+    "        label=\"Baixar Dados\",\n",
+    "        data=csv,\n",
+    "        file_name=\"base.csv\",\n",
+    "        mime=\"text/csv\",\n",
+    "    )\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,11 +304,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Adicionei o spinner na etapa de upload e a barra de progresso na etapa de download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "\n",
+    "import pandas as pd\n",
+    "import streamlit as st\n",
+    "import regex as re\n",
+    "import time\n",
+    "\n",
+    "my_bar = st.progress(0, text=\"Carregando o Aplicativo...\")\n",
+    "for percent_complete in range(100):\n",
+    "    time.sleep(0.01)\n",
+    "    my_bar.progress(percent_complete + 1, text=\"Carregando o Aplicativo...\")\n",
+    "time.sleep(1)\n",
+    "my_bar.empty()\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "files = st.file_uploader('Upload', type='csv', accept_multiple_files=True)\n",
+    "\n",
+    "list_continentes = ['África','América Central','América do Norte', 'América do Sul', 'Ásia', 'Europa', 'Oriente Médio', 'Oceania']\n",
+    "\n",
+    "\n",
+    "if files != []:\n",
+    "    with st.spinner('Upload em andamento...'):\n",
+    "        time.sleep(2)\n",
+    "        st.success(\"Upload concluído!\")\n",
+    "    for file in files:\n",
+    "        data = pd.read_csv(file)\n",
+    "        #Primeiro obtive a identificação do ano, que está dentro de uma frase na terceira linha\n",
+    "        line = data.iloc[1][0]\n",
+    "        #Utilizo Regex para extrair o ano\n",
+    "        Ano = re.findall(r'\\b(20[0-9][0-9])\\b', line)[0]   \n",
+    "        #Depois trato o restante do arquivo para ficar no formato desejado    \n",
+    "        data = data.iloc[4:]\n",
+    "        data.iloc[0][0] = 'Pais'\n",
+    "        data.columns = data.iloc[0]\n",
+    "        data = data.drop(data.index[0])\n",
+    "        data = data.dropna()\n",
+    "        #Retiro a coluna e a linha de total\n",
+    "        data = data[data['Pais'] != 'Total']\n",
+    "        data = data.drop(columns='Total')\n",
+    "        data['Ano'] = Ano\n",
+    "\n",
+    "        #Utilizei IA para criar a função que identifica o continente (Ps: Estou com muita dificuldade para criar funções lambda)\n",
+    "        data['Continente'] = data['Pais'].apply(\n",
+    "            lambda line: next((pais for pais in list_continentes if pais in line), None)\n",
+    "        )\n",
+    "        data['Continente'] = data['Continente'].fillna(method='ffill')\n",
+    "\n",
+    "        #Por fim, retiro as linhas que contém o total de cada continente, deixando apenas os países\n",
+    "        data = data[~data['Pais'].isin(list_continentes)]\n",
+    "\n",
+    "        data = data.melt(id_vars=['Continente', 'Pais', 'Ano'], var_name='Mes', value_name='Qtd')\n",
+    "\n",
+    "        #Concateno em um dataframe, pois assim permito que o usuário faça a importação de diversos CSVs, um para cada ano\n",
+    "        df = pd.concat([df, data])\n",
+    "\n",
+    "    #Crio a lista de continentes\n",
+    "    list_cont = df['Continente'].drop_duplicates().tolist()\n",
+    "    list_cont.append('Todos')\n",
+    "\n",
+    "    #Pego o id da opção \"Todos\"\n",
+    "    default_cont = list_cont.index('Todos')\n",
+    "\n",
+    "    #Crio o filtro de continentes\n",
+    "    filter_cont = st.selectbox('Filtrar Continentes', list_cont, index=default_cont)\n",
+    "\n",
+    "    #Aplico a condição para só filtrar se houver seleção\n",
+    "    if filter_cont != 'Todos':\n",
+    "        df = df.loc[df['Continente'] == filter_cont]\n",
+    "\n",
+    "    #Crio o filtro de colunas\n",
+    "    list_colunas = st.multiselect('Selecione as colunas', df.columns, df.columns)\n",
+    "    #Aplico o filtro\n",
+    "    df = df[list_colunas]\n",
+    "\n",
+    "    #Mostro a tabela filtrada\n",
+    "    st.write(df) \n",
+    "\n",
+    "    #Converto para CSV\n",
+    "    csv = df.to_csv().encode(\"utf-8\")\n",
+    "\n",
+    "    #Crio botão para baixar o arquivo csv\n",
+    "    st.download_button(\n",
+    "        label=\"Baixar Dados\",\n",
+    "        data=csv,\n",
+    "        file_name=\"base.csv\",\n",
+    "        mime=\"text/csv\",\n",
+    "    )\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
