--- a/App/main.ipynb
+++ b/App/main.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Rodrigo_Mesquita_DR3_TP3\n",
+    "## Desenvolvimento Front-End com Python (com Streamlit) [24E3_1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -996,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1143,13 +1146,15 @@
     "\n",
     "    st.plotly_chart(fig)\n",
     "\n",
-    "    #Criando Gráfico de linhas\n",
-    "    cmap = {'Janeiro':1, 'Fevereiro':2,'Março':3,'Abril':4,'Maio':5, 'Junho':6,'Julho': 7,'Agosto': 8,'Setembro': 9,'Outubro': 10, 'Novembro': 11, 'Dezembro': 12}\n",
-    "    df['Mes'] = df['Mes'].map(cmap)\n",
-    "    df['Data'] = pd.to_datetime(df['Ano'].astype(str) + '-' + df['Mes'].astype(str) + '-01', format='%Y-%m-%d')\n",
-    "    df_ag= df.groupby('Data', as_index=False)['Qtd'].sum()\n",
+    "    #Criando Gráfico de Barras\n",
+    "    fig = px.bar(\n",
+    "        df,\n",
+    "        x='Pais',\n",
+    "        y='Qtd',\n",
+    "        title='Quantidade de Turistas por Pais',\n",
+    "        labels={'Qtd Tutistas': 'Qtd'}\n",
+    "    )\n",
     "\n",
-    "    fig = px.line(df_ag, x='Data', y='Qtd', title='Qtd Turistas por Mês')\n",
     "    st.plotly_chart(fig)\n",
     "\n",
     "\n",
@@ -1180,10 +1185,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "\n",
+    "import pandas as pd\n",
+    "import streamlit as st\n",
+    "import regex as re\n",
+    "import time\n",
+    "from st_aggrid import AgGrid, GridOptionsBuilder\n",
+    "import plotly.express as px\n",
+    "\n",
+    "\n",
+    "def barra_lateral():\n",
+    "    st.sidebar.header('Filtros')\n",
+    "    #Adicionando o Color Picker\n",
+    "    cor_fundo = st.sidebar.color_picker(\"Cor de fundo\", \"#FFFFFF\")\n",
+    "    cor_fonte = st.sidebar.color_picker(\"Cor da fonte\", \"#000000\")  \n",
+    "\n",
+    "    #Alterando o estilo da classe stApp\n",
+    "    st.markdown(f\"<style> .stApp {{background-color: {cor_fundo}; color:{cor_fonte};}}   </style>\", unsafe_allow_html=True)\n",
+    "\n",
+    "def upload():\n",
+    "    files = st.file_uploader('Upload', type='csv', accept_multiple_files=True)\n",
+    "    return files\n",
+    "\n",
+    "@st.cache_data\n",
+    "def tratamento(files):\n",
+    "    \n",
+    "    df = pd.DataFrame()\n",
+    "    list_continentes = ['África','América Central','América do Norte', 'América do Sul', 'Ásia', 'Europa', 'Oriente Médio', 'Oceania']\n",
+    "    \n",
+    "    if files != []:\n",
+    "        #Adicionando o Spinner\n",
+    "        with st.spinner('Upload em andamento...'):\n",
+    "            time.sleep(2)\n",
+    "            st.success(\"Upload concluído!\")\n",
+    "\n",
+    "        for file in files:\n",
+    "            data = pd.read_csv(file)\n",
+    "            #Primeiro obtive a identificação do ano, que está dentro de uma frase na terceira linha\n",
+    "            line = data.iloc[1][0]\n",
+    "            #Utilizo Regex para extrair o ano\n",
+    "            Ano = re.findall(r'\\b(20[0-9][0-9])\\b', line)[0]   \n",
+    "            #Depois trato o restante do arquivo para ficar no formato desejado    \n",
+    "            data = data.iloc[4:]\n",
+    "            data.iloc[0][0] = 'Pais'\n",
+    "            data.columns = data.iloc[0]\n",
+    "            data = data.drop(data.index[0])\n",
+    "            data = data.dropna()\n",
+    "            #Retiro a coluna e a linha de total\n",
+    "            data = data[data['Pais'] != 'Total']\n",
+    "            data = data.drop(columns='Total')\n",
+    "            data['Ano'] = Ano\n",
+    "\n",
+    "            #Utilizei IA para criar a função que identifica o continente (Ps: Estou com muita dificuldade para criar funções lambda)\n",
+    "            data['Continente'] = data['Pais'].apply(\n",
+    "                lambda line: next((pais for pais in list_continentes if pais in line), None)\n",
+    "            )\n",
+    "            data['Continente'] = data['Continente'].fillna(method='ffill')\n",
+    "\n",
+    "            #Por fim, retiro as linhas que contém o total de cada continente, deixando apenas os países\n",
+    "            data = data[~data['Pais'].isin(list_continentes)]\n",
+    "\n",
+    "            data = data.melt(id_vars=['Continente', 'Pais', 'Ano'], var_name='Mes', value_name='Qtd')\n",
+    "\n",
+    "            #Concateno em um dataframe, pois assim permito que o usuário faça a importação de diversos CSVs, um para cada ano\n",
+    "            df = pd.concat([df, data])\n",
+    "\n",
+    "            #Converto para CSV\n",
+    "            csv = df.to_csv().encode(\"utf-8\")\n",
+    "\n",
+    "        return df, csv\n",
+    "\n",
+    "def filtra_df(df):\n",
+    "    if df is not None:\n",
+    "        \n",
+    "        #Inicializo o session_state\n",
+    "        if 'filter_cont' not in st.session_state:\n",
+    "            st.session_state.filter_cont = 'Todos'\n",
+    "        if 'list_colunas' not in st.session_state:\n",
+    "            st.session_state.list_colunas = df.columns.tolist()\n",
+    "\n",
+    "        #Crio a lista de continentes\n",
+    "        list_cont = df['Continente'].drop_duplicates().tolist()\n",
+    "        list_cont.append('Todos')\n",
+    "\n",
+    "        #Crio o filtro de continentes\n",
+    "        st.session_state.filter_cont = st.sidebar.selectbox('Filtrar Continentes', list_cont, index=list_cont.index(st.session_state.filter_cont))\n",
+    "\n",
+    "        #Aplico a condição para só filtrar se houver seleção\n",
+    "        if st.session_state.filter_cont != 'Todos':\n",
+    "            df = df.loc[df['Continente'] == st.session_state.filter_cont]\n",
+    "\n",
+    "        #Crio o filtro de colunas\n",
+    "        st.session_state.list_colunas = st.sidebar.multiselect('Selecione as colunas', df.columns, st.session_state.list_colunas)\n",
+    "\n",
+    "        #Aplico o filtro\n",
+    "        df_filt = df[st.session_state.list_colunas]\n",
+    "\n",
+    "        #Adicionando a barra de progresso\n",
+    "        my_bar = st.progress(0, text=\"Carregando a Visualização...\")\n",
+    "        for percent_complete in range(100):\n",
+    "            time.sleep(0.001)\n",
+    "            my_bar.progress(percent_complete + 1, text=\"Carregando a Visualização...\")\n",
+    "        time.sleep(0.5)\n",
+    "        my_bar.empty()\n",
+    "    \n",
+    "        return df_filt\n",
+    "\n",
+    "def exibe_tabelas(df_filt):\n",
+    "    st.write('## Tabela Comum')\n",
+    "    st.dataframe(df)\n",
+    "\n",
+    "    st.write('## Tabela Interativa')\n",
+    "    if df_filt is not None:\n",
+    "        gb = GridOptionsBuilder.from_dataframe(df_filt)\n",
+    "        gb.configure_default_column(editable=False, groupable=True)\n",
+    "        gb.configure_selection('multiple', use_checkbox=True)\n",
+    "        gridOptions = gb.build()\n",
+    "\n",
+    "        AgGrid(df_filt, gridOptions=gridOptions, enable_enterprise_modules=True)\n",
+    "\n",
+    "def graficos(df):\n",
+    "    # Criando o gráfico de pizza\n",
+    "    fig = px.pie(\n",
+    "        df,\n",
+    "        values='Qtd',\n",
+    "        names='Continente',\n",
+    "        title='Quantidade de Turistas por Continente',\n",
+    "        labels={'Qtd Tutistas': 'Qtd'},\n",
+    "        hole=False\n",
+    "    )\n",
+    "\n",
+    "    fig.update_traces(textinfo='label+percent', textfont_size=10)\n",
+    "\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "    #Criando Gráfico de Barras\n",
+    "    fig = px.bar(\n",
+    "        df,\n",
+    "        x='Pais',\n",
+    "        y='Qtd',\n",
+    "        title='Quantidade de Turistas por Pais',\n",
+    "        labels={'Qtd Tutistas': 'Qtd'}\n",
+    "    )\n",
+    "\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "    #Criando histrograma\n",
+    "    fig = px.histogram(\n",
+    "        df,\n",
+    "        x='Qtd',\n",
+    "        title='Distribuição da Qtd de Turistas',\n",
+    "        labels={'Qtd': 'Quantidade de Turistas'},\n",
+    "        nbins=20\n",
+    "    )\n",
+    "\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "################### INICIANDO O APP ######################\n",
+    "\n",
+    "barra_lateral()\n",
+    "files = upload()\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "if files:\n",
+    "    df, csv = tratamento(files)\n",
+    "    df_filt = filtra_df(df)\n",
+    "    exibe_tabelas(df_filt)\n",
+    "    st.download_button(label=\"Baixar Dados\", data=csv, file_name=\"base.csv\", mime=\"text/csv\")\n",
+    "    graficos(df)\n",
+    "end = time.time()\n",
+    "st.write(f'Tempo de execução: {end - start:.2f} segundos')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1195,10 +1381,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "\n",
+    "import pandas as pd\n",
+    "import streamlit as st\n",
+    "import regex as re\n",
+    "import time\n",
+    "from st_aggrid import AgGrid, GridOptionsBuilder\n",
+    "import plotly.express as px\n",
+    "\n",
+    "\n",
+    "def barra_lateral():\n",
+    "    st.sidebar.header('Filtros')\n",
+    "    #Adicionando o Color Picker\n",
+    "    cor_fundo = st.sidebar.color_picker(\"Cor de fundo\", \"#FFFFFF\")\n",
+    "    cor_fonte = st.sidebar.color_picker(\"Cor da fonte\", \"#000000\")  \n",
+    "\n",
+    "    #Alterando o estilo da classe stApp\n",
+    "    st.markdown(f\"<style> .stApp {{background-color: {cor_fundo}; color:{cor_fonte};}}   </style>\", unsafe_allow_html=True)\n",
+    "\n",
+    "def upload():\n",
+    "    files = st.file_uploader('Upload', type='csv', accept_multiple_files=True)\n",
+    "    return files\n",
+    "\n",
+    "@st.cache_data\n",
+    "def tratamento(files):\n",
+    "    \n",
+    "    df = pd.DataFrame()\n",
+    "    list_continentes = ['África','América Central','América do Norte', 'América do Sul', 'Ásia', 'Europa', 'Oriente Médio', 'Oceania']\n",
+    "    \n",
+    "    if files != []:\n",
+    "        #Adicionando o Spinner\n",
+    "        with st.spinner('Upload em andamento...'):\n",
+    "            time.sleep(2)\n",
+    "            st.success(\"Upload concluído!\")\n",
+    "\n",
+    "        for file in files:\n",
+    "            data = pd.read_csv(file)\n",
+    "            #Primeiro obtive a identificação do ano, que está dentro de uma frase na terceira linha\n",
+    "            line = data.iloc[1][0]\n",
+    "            #Utilizo Regex para extrair o ano\n",
+    "            Ano = re.findall(r'\\b(20[0-9][0-9])\\b', line)[0]   \n",
+    "\n",
+    "            #Depois trato o restante do arquivo para ficar no formato desejado    \n",
+    "            data = data.iloc[4:]\n",
+    "            data.iloc[0][0] = 'Pais'\n",
+    "            data.columns = data.iloc[0]\n",
+    "            data = data.drop(data.index[0])\n",
+    "            data = data.dropna()\n",
+    "\n",
+    "            #Retiro a coluna e a linha de total\n",
+    "            data = data[data['Pais'] != 'Total']\n",
+    "            data = data.drop(columns='Total')\n",
+    "            data['Ano'] = Ano\n",
+    "\n",
+    "            #Utilizei IA para criar a função que identifica o continente (Ps: Estou com muita dificuldade para criar funções lambda)\n",
+    "            data['Continente'] = data['Pais'].apply(\n",
+    "                lambda line: next((pais for pais in list_continentes if pais in line), None)\n",
+    "            )\n",
+    "            data['Continente'] = data['Continente'].fillna(method='ffill')\n",
+    "\n",
+    "            #Por fim, retiro as linhas que contém o total de cada continente, deixando apenas os países\n",
+    "            data = data[~data['Pais'].isin(list_continentes)]\n",
+    "\n",
+    "            data = data.melt(id_vars=['Continente', 'Pais', 'Ano'], var_name='Mes', value_name='Qtd')\n",
+    "\n",
+    "            #Convertendo o campo Qtd para número\n",
+    "            data['Qtd'] = data['Qtd'].str.replace(' ', '')\n",
+    "            data['Qtd'] = pd.to_numeric(data['Qtd'], errors='coerce')\n",
+    "            \n",
+    "            #Concateno em um dataframe, pois assim permito que o usuário faça a importação de diversos CSVs, um para cada ano\n",
+    "            df = pd.concat([df, data])\n",
+    "\n",
+    "            #Converto para CSV\n",
+    "            csv = df.to_csv().encode(\"utf-8\")\n",
+    "\n",
+    "        return df, csv\n",
+    "\n",
+    "def filtra_df(df):\n",
+    "    if df is not None:\n",
+    "        \n",
+    "        #Inicializo o session_state\n",
+    "        if 'filter_cont' not in st.session_state:\n",
+    "            st.session_state.filter_cont = 'Todos'\n",
+    "        if 'list_colunas' not in st.session_state:\n",
+    "            st.session_state.list_colunas = df.columns.tolist()\n",
+    "\n",
+    "        #Crio a lista de continentes\n",
+    "        list_cont = df['Continente'].drop_duplicates().tolist()\n",
+    "        list_cont.append('Todos')\n",
+    "\n",
+    "        #Crio o filtro de continentes\n",
+    "        st.session_state.filter_cont = st.sidebar.selectbox('Filtrar Continentes', list_cont, index=list_cont.index(st.session_state.filter_cont))\n",
+    "\n",
+    "        #Aplico a condição para só filtrar se houver seleção\n",
+    "        if st.session_state.filter_cont != 'Todos':\n",
+    "            df = df.loc[df['Continente'] == st.session_state.filter_cont]\n",
+    "\n",
+    "        df_filt = df.copy()\n",
+    "        #Crio o filtro de colunas\n",
+    "        st.session_state.list_colunas = st.sidebar.multiselect('Selecione as colunas', df.columns, st.session_state.list_colunas)\n",
+    "\n",
+    "        #Aplico o filtro\n",
+    "        df_filt_tab = df[st.session_state.list_colunas]\n",
+    "\n",
+    "        #Adicionando a barra de progresso\n",
+    "        my_bar = st.progress(0, text=\"Carregando a Visualização...\")\n",
+    "        for percent_complete in range(100):\n",
+    "            time.sleep(0.001)\n",
+    "            my_bar.progress(percent_complete + 1, text=\"Carregando a Visualização...\")\n",
+    "        time.sleep(0.5)\n",
+    "        my_bar.empty()\n",
+    "    \n",
+    "        return df_filt, df_filt_tab\n",
+    "\n",
+    "def exibe_tabelas(df):\n",
+    "    st.write('## Tabela Comum')\n",
+    "    st.dataframe(df)\n",
+    "\n",
+    "    st.write('## Tabela Interativa')\n",
+    "    if df is not None:\n",
+    "        gb = GridOptionsBuilder.from_dataframe(df)\n",
+    "        gb.configure_default_column(editable=False, groupable=True)\n",
+    "        gb.configure_selection('multiple', use_checkbox=True)\n",
+    "        gridOptions = gb.build()\n",
+    "\n",
+    "        AgGrid(df, gridOptions=gridOptions, enable_enterprise_modules=True)\n",
+    "\n",
+    "def graficos(df):\n",
+    "    # Criando o gráfico de pizza\n",
+    "    fig = px.pie(\n",
+    "        df,\n",
+    "        values='Qtd',\n",
+    "        names='Continente',\n",
+    "        title='Quantidade de Turistas por Continente',\n",
+    "        labels={'Qtd Tutistas': 'Qtd'},\n",
+    "        hole=False\n",
+    "    )\n",
+    "\n",
+    "    fig.update_traces(textinfo='label+percent', textfont_size=10)\n",
+    "\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "    #Criando Gráfico de Barras\n",
+    "    fig = px.bar(\n",
+    "        df,\n",
+    "        x='Pais',\n",
+    "        y='Qtd',\n",
+    "        title='Quantidade de Turistas por Pais',\n",
+    "        labels={'Qtd Tutistas': 'Qtd'}\n",
+    "    )\n",
+    "\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "    #Criando histrograma\n",
+    "    fig = px.histogram(\n",
+    "        df,\n",
+    "        x='Qtd',\n",
+    "        title='Distribuição da Qtd de Turistas',\n",
+    "        labels={'Qtd': 'Quantidade de Turistas'},\n",
+    "        nbins=20\n",
+    "    )\n",
+    "\n",
+    "    st.plotly_chart(fig)\n",
+    "\n",
+    "def metricas(df):\n",
+    "    #Qtd linhas\n",
+    "    qtd_linhas = df.shape[0]\n",
+    "    \n",
+    "    #Média de passageiros\n",
+    "    media_psg = round(df['Qtd'].mean(),0)\n",
+    "\n",
+    "    #Total de passageiros\n",
+    "    total_psg = df['Qtd'].sum()\n",
+    "\n",
+    "    # Exibindo as métricas\n",
+    "    a,b,c = st.columns(3)\n",
+    "\n",
+    "    with a:\n",
+    "        st.metric(label=\"Qtd Registros\", value=qtd_linhas)\n",
+    "    with b:\n",
+    "        st.metric(label=\"Média Passageiros por Registro\", value=media_psg)\n",
+    "    with c:\n",
+    "        st.metric(label=\"Total de Passageiros\", value=total_psg)\n",
+    "\n",
+    "################### INICIANDO O APP ######################\n",
+    "\n",
+    "barra_lateral()\n",
+    "files = upload()\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "st.write('# Rodrigo_Mesquita_DR1_TP3')\n",
+    "st.write('## Desenvolvimento Front-End com Python (com Streamlit) [24E3_1]')\n",
+    "st.write('Notebook disponível em: https://github.com/rodrigo1992-cmyk/DR1_TP3')\n",
+    "st.write('Para testar o aplicativo, realizar upload dos arquivos disponíveis em: https://github.com/rodrigo1992-cmyk/DR1_TP3/tree/main/Data')\n",
+    "\n",
+    "\n",
+    "if files:\n",
+    "    df, csv = tratamento(files)\n",
+    "    df_filt, df_filt_tab = filtra_df(df)\n",
+    "    metricas(df_filt)\n",
+    "    graficos(df_filt)\n",
+    "    exibe_tabelas(df_filt_tab)\n",
+    "    st.download_button(label=\"Baixar Dados\", data=csv, file_name=\"base.csv\", mime=\"text/csv\")\n",
+    "end = time.time()\n",
+    "\n",
+    "st.write(f'Tempo de execução: {end - start:.2f} segundos')"
+   ]
   }
  ],
  "metadata": {
