--- a/App/main.ipynb
+++ b/App/main.ipynb
@@ -1579,17 +1579,18 @@
     "\n",
     "################### INICIANDO O APP ######################\n",
     "\n",
+    "\n",
+    "\n",
+    "st.write('# Rodrigo_Mesquita_DR1_TP3')\n",
+    "st.write('## Desenvolvimento Front-End com Python (com Streamlit) [24E3_1]')\n",
+    "st.write('Este App está disponível em: https://rodrigo1992-cmyk-dr1-tp3-appapp-txje3z.streamlit.app/')\n",
+    "st.write('Notebook disponível em: https://github.com/rodrigo1992-cmyk/DR1_TP3')\n",
+    "st.write('Para testar o aplicativo, realizar upload dos arquivos disponíveis em: https://github.com/rodrigo1992-cmyk/DR1_TP3/tree/main/Data')\n",
+    "\n",
     "barra_lateral()\n",
     "files = upload()\n",
     "\n",
     "start = time.time()\n",
-    "\n",
-    "st.write('# Rodrigo_Mesquita_DR1_TP3')\n",
-    "st.write('## Desenvolvimento Front-End com Python (com Streamlit) [24E3_1]')\n",
-    "st.write('### Este App está disponível em: https://rodrigo1992-cmyk-dr1-tp3-appapp-txje3z.streamlit.app/')\n",
-    "st.write('Notebook disponível em: https://github.com/rodrigo1992-cmyk/DR1_TP3')\n",
-    "st.write('Para testar o aplicativo, realizar upload dos arquivos disponíveis em: https://github.com/rodrigo1992-cmyk/DR1_TP3/tree/main/Data')\n",
-    "\n",
     "\n",
     "if files:\n",
     "    df, csv = tratamento(files)\n",
